fixed indicator tweaking by adding z-index property

--- a/css/sass/_modules.scss
+++ b/css/sass/_modules.scss
@@ -68,6 +68,7 @@ button {
         height: 100%;
         position: absolute;
         top: 0;
+        z-index: 1;
 
         img { 
             margin: auto;
